# SPARROW-Engine

./: .gitignore  README.md  citation.cff
pytorchwildlife-compat/: README.md  pyproject.toml
pytorchwildlife-compat/src/pytorchwildlife/: __init__.py
sparrow-engine/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  RTDETR_IMPL_NOTES.md
sparrow-engine/.cargo/: config.toml
sparrow-engine/bench/: python_ort_inference.py  run_engine_bench.sh
sparrow-engine/docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  smoke-test.sh
sparrow-engine/include/: sparrow_engine.h
sparrow-engine/models/: audiobirds.toml  herdnet.toml  owlt.toml
sparrow-engine/scripts/: audit_wheel_gate.sh  build_all_flavors.sh  build_and_tag_sparrow_engine.sh  catalog.toml  check_ffi_symbols.sh  clean_room_test.sh  download_models.sh  export_image_tarball.sh  guard_no_print.sh  ort-env.sh  package_cli_tarball.sh  smoke_test_models.sh  sparrow_contract_test.sh  test.sh  test_nvjpeg_dlopen.sh
sparrow-engine/scripts/clean_room/: Dockerfile.ubuntu22  Dockerfile.ubuntu24
sparrow-engine/scripts/tests/: test_check_ffi_symbols.sh  test_download_models.sh
sparrow-engine/sparrow-engine-cli/: Cargo.toml
sparrow-engine/sparrow-engine-cli/src/: engine_dispatch.rs  main.rs  ort_resolver.rs
sparrow-engine/sparrow-engine-cli/tests/: test_detect_audio_visualize.rs
sparrow-engine/sparrow-engine-client/: pyproject.toml  sparrow_engine_client.py
sparrow-engine/sparrow-engine-client/tests/: test_client.py
sparrow-engine/sparrow-engine-core/: Cargo.toml
sparrow-engine/sparrow-engine-core/assets/fonts/: LICENSE
sparrow-engine/sparrow-engine-core/src/: catalog.rs  daynight.rs  export.rs  hash.rs  lib.rs  pipeline_compat.rs  postprocess.rs  preprocess.rs  preprocess_audio.rs  stats.rs  viz.rs
sparrow-engine/sparrow-engine-core/tests/: audio_heatmap_e2e.rs  audio_viz.rs  integration_viz_dispatch.rs
sparrow-engine/sparrow-engine-cpu/: Cargo.toml  NativeMethods.g.cs  build.rs  exports.def  sparrow_engine.h
sparrow-engine/sparrow-engine-cpu/examples/: engine_bench.rs
sparrow-engine/sparrow-engine-cpu/src/: classify.rs  detect.rs  detect_audio.rs  embed.rs  engine.rs  ffi.rs  lib.rs  pipeline.rs  preprocess.rs
sparrow-engine/sparrow-engine-cpu/tests/: integration_audio.rs  integration_build_idempotency.rs  integration_classify.rs  integration_detect.rs  integration_engine_singleton.rs  integration_ffi_symbols.rs  integration_mel_classifier.rs  integration_perch2.rs  integration_pipeline_gpu_stress.rs  integration_preprocess_edges.rs  integration_reexports.rs  integration_tiled.rs  integration_tracing_bridge.rs  smoke.rs
sparrow-engine/sparrow-engine-cpu/tests/common/: mod.rs
sparrow-engine/sparrow-engine-gpu/: Cargo.toml  NativeMethods.g.cs  build.rs  exports.def  exports.map  sparrow_engine.h
sparrow-engine/sparrow-engine-gpu/examples/: bench_amplification.rs  bench_audio_e2e.rs  bench_cufft.rs  bench_mel_gemm.rs  bench_ort_io.rs  bench_ort_io_fresh_buffer.rs  bench_power.rs  bench_power_to_db.rs  bench_step1_full.rs  profile_audio_e2e.rs
sparrow-engine/sparrow-engine-gpu/src/: classify.rs  decode.rs  detect.rs  detect_audio.rs  embed.rs  engine.rs  ffi.rs  lib.rs  pipeline.rs  profile.rs
sparrow-engine/sparrow-engine-gpu/src/audio/: cufft_plan.rs  hann.rs  mel_gemm.rs  mod.rs  ort_io.rs  power_kernel.cu  power_kernel.rs  power_to_db.cu  power_to_db.rs  transpose.cu  transpose.rs  window_frame.cu  window_frame.rs
sparrow-engine/sparrow-engine-gpu/tests/: audio_e2e_parity.rs  audio_e2e_parity_fp16.rs  cufft_parity.rs  decode_parity.rs  engine_init.rs  integration_audio_raw.rs  integration_classifier.rs  integration_engine_dispatch.rs  integration_ffi_symbols.rs  integration_mel_classifier_gpu.rs  integration_tiled.rs  integration_yolo.rs  kernels_parity.rs  mel_gemm_parity.rs  ort_io_parity.rs  power_parity.rs  power_to_db_parity.rs
sparrow-engine/sparrow-engine-mobile/: Cargo.toml  NativeMethods.g.cs  build.rs  exports.def  sparrow_engine.h  wrapper.h
sparrow-engine/sparrow-engine-mobile/examples/: orca_cascade.rs  orca_ctypes_smoke.py
sparrow-engine/sparrow-engine-mobile/src/: cascade.rs  engine.rs  ffi.rs  lib.rs  pipeline.rs  preprocess.rs  sys.rs  tflite.rs  timing.rs
sparrow-engine/sparrow-engine-mobile/tests/: cascade_parity.rs  image_detect.rs  integration_ffi_symbols.rs
sparrow-engine/sparrow-engine-python/: Cargo.toml  README.md  build.sh  pyproject.toml
sparrow-engine/sparrow-engine-python/src/: engine_dispatch.rs  lib.rs
sparrow-engine/sparrow-engine-python/tests/: conftest.py  test_embed_facade.py  test_logging_bridge.py  test_progress_callback.py  test_version_attr.py  test_visualize_audio.py
sparrow-engine/sparrow-engine-server/: Cargo.toml
sparrow-engine/sparrow-engine-server/src/: cli.rs  config.rs  discover.rs  drift.rs  engine_dispatch.rs  error.rs  lib.rs  main.rs  ort_resolver.rs  response.rs  router.rs  sink.rs  state.rs
sparrow-engine/sparrow-engine-server/tests/: store_flow.rs  test_embed.rs  test_errors.rs  test_inference.rs  test_management.rs
sparrow-engine/sparrow-engine-types/: Cargo.toml
sparrow-engine/sparrow-engine-types/src/: device.rs  drift_metrics.rs  engine_config.rs  error.rs  inference_log.rs  lib.rs  manifest.rs  model_type.rs  preprocess_meta.rs  trt_state.rs  types.rs
sparrow-engine/tests/cs_pinvoke_smoke/: .gitignore  Program.cs  cs_pinvoke_smoke.csproj
sparrow-engine/tests/csharp_ffi_test/: NativeMethods.g.cs  Program.cs  csharp_ffi_test.csproj
sparrow-engine/tools/: compare_outputs.py  convert_fp16.py  download_models.py  generate_audio_golden.py  generate_golden_outputs.py  generate_mel_classifier_fixture.py  generate_synthetic_audio.py  generate_synthetic_encoder_fixture.py  run_integration_tests.sh  verify_audio_params.py  verify_symbol_isolation.sh  visualize_libsparrow_engine_outputs.py
sparrow-engine/tools/examples/: birdnet-v2.4.toml  megadetector-v6.toml
sparrow-engine/tools/pw_tools/: __init__.py  cli.py  convert.py  manifest.py  manifest_schema.md  upload.py  validate.py
(+66 files in other folders)
