[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchwildlife"
version = "0.1.0"
description = "Compatibility shim: pytorchwildlife has been renamed to sparrow-engine. This alias will be removed in 0.2.0."
requires-python = ">=3.10"
dependencies = [
    "sparrow-engine==0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytorchwildlife"]
