[project]
name = "sparrow-engine-client"
version = "0.1.0"
description = "Python SDK for sparrow-engine-server HTTP API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
